crates/ruff_linter/src/rules/flake8_boolean_trap/snapshots/ruff_linter__rules__flake8_boolean_trap__tests__FBT003_FBT.py.snap
---
source: crates/ruff_linter/src/rules/flake8_boolean_trap/mod.rs
---
FBT003 Boolean positional value in function call
  --> FBT.py:41:11
   |
41 | used("a", True)
   |           ^^^^
42 | used(do=True)

FBT003 Boolean positional value in function call
  --> FBT.py:56:11
   |
54 | {}.pop(True, False)
55 | dict.fromkeys(("world",), True)
56 | {}.deploy(True, False)
   |           ^^^^
57 | getattr(someobj, attrname, False)
58 | mylist.index(True)

FBT003 Boolean positional value in function call
  --> FBT.py:56:17
   |
54 | {}.pop(True, False)
55 | dict.fromkeys(("world",), True)
56 | {}.deploy(True, False)
   |                 ^^^^^
57 | getattr(someobj, attrname, False)
58 | mylist.index(True)

FBT003 Boolean positional value in function call
   --> FBT.py:123:10
123 | settings(True)
    |          ^^^^

FBT003 Boolean positional value in function call
   --> FBT.py:147:20
145 |     is_foo_or_bar=Case(
146 |         When(Q(is_foo=True) | Q(is_bar=True)),
147 |         then=Value(True),
    |                    ^^^^
148 |     ),
149 |     default=Value(False),

FBT003 Boolean positional value in function call
   --> FBT.py:149:19
    |
147 |         then=Value(True),
148 |     ),
149 |     default=Value(False),
    |                   ^^^^^
150 | )

FBT003 Boolean positional value in function call
   --> FBT.py:159:23
    |
158 | class Settings(BaseSettings):
159 |     foo: bool = Field(True, exclude=True)
    |                       ^^^^
